// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APIError should not print a tagline 1`] = `
"
Status code: undefined
Error code: [31mundefined[39m
Message: [31mundefined[39m
Request ID: [31mundefined[39m"
`;

exports[`APIError should print the tagline 1`] = `
"
This is a tagline
Status code: undefined
Error code: [31mundefined[39m
Message: [31mundefined[39m
Request ID: [31mundefined[39m"
`;

exports[`APIError when the error is of type APIErrorResponse it should print everything 1`] = `
"
This is a tagline
Status code: undefined
Error code: [31mYOU_SHALL_NOT_GET_MODE_INFO[39m
Message: [31msomething went wrong[39m
Request ID: [31m123456qwerty[39m"
`;

exports[`APIError when the error is of type APIErrorResponse it should print the details 1`] = `
"
This is a tagline
Status code: undefined
Error code: [31mundefined[39m
Message: [31msomething went wrong[39m
Request ID: [31mundefined[39m"
`;

exports[`APIError when the error is of type APIErrorResponse it should print the error code 1`] = `
"
This is a tagline
Status code: undefined
Error code: [31mYOU_SHALL_NOT_GET_MODE_INFO[39m
Message: [31mundefined[39m
Request ID: [31mundefined[39m"
`;

exports[`APIError when the error is of type APIErrorResponse it should print the request Id 1`] = `
"
This is a tagline
Status code: undefined
Error code: [31mundefined[39m
Message: [31mundefined[39m
Request ID: [31m123456qwerty[39m"
`;
